--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -13,11 +13,10 @@
 
 {% if movie_list %}
 <section class="lista-de-cards">
-  <!-- Aqui você pode incluir a lógica de exibição dos filmes -->
   {% for movie in movie_list %}
   <article class="card">
-    <a href="{% url 'movies:detail' forloop.counter %}">
-      <img src="{{ movie.poster_url }}" alt="Poster do filme {{ movie.name}}" />
+    <a href="{% url 'movies:detail' movie.id %}"> 
+      <img src="{{ movie.poster_url }}" alt="Poster do filme {{ movie.name }}" />
     </a>
     <p>{{ movie.name }} ({{ movie.release_year }})</p>
   </article>
