--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -9,9 +9,17 @@
   <ul>
     <li>Nome: {{ movie.name }}</li>
     <li>Ano de Lançamento: {{ movie.release_year }} </li>
-  {% if movie.list_set.all %}
-    <li>Incluso nas listas: {{ movie.list_set.all|join:", " }} </li>
-  {% endif %}
+    {% if movie.provider %}
+      <li>Disponibilidade de Streaming: {{ movie.provider.service }} </li>
+      {% if movie.provider.has_flat_price %}
+        <li>Preço: FLAT </li>
+      {% else %}
+        <li>Preço: R${{ movie.provider.price }} </li>
+      {% endif %}
+    {% endif %}
+    {% if movie.list_set.all %}
+      <li>Incluso nas listas: {{ movie.list_set.all|join:", " }} </li>
+    {% endif %}
     <li><a href="{% url 'movies:update' movie.id %}">Editar</a></li>
     <li><a href="{% url 'movies:delete' movie.id %}">Apagar</a></li>
   </ul>
