--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,16 @@
         <a href="{% url 'index' %}"> <img src="{% static 'logo.svg' %}"> </a>
         <nav id="navegacao-principal">
             <ul>
+                {% if user.is_authenticated %}
+                    <li> Logado com {{ user.username }} </li>
+                    <li>
+                        <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Sair</a>
+                        <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+                            {% csrf_token %}
+                        </form>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Entrar</a></li>
+                {% endif %}
                 <li><a href="{% url 'movies:index' %}">Filmes</a></li>
                 <li><a href="{% url 'movies:lists' %}">Listas</a></li>
                 <li><a href="{% url 'about' %}">Sobre</a></li>
